Fixed bug #41984 (Hangs on large SoapClient requests)